Created Webpage using Flask to upload image and check accuracy.

--- a/main.ipynb
+++ b/main.ipynb
@@ -274,12 +274,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 40,
    "id": "fabc5aad-50ca-4874-a74a-ecb639eb522f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "image = 'c.png'\n",
+    "image = 'chilli_pepper.jpg'\n",
     "image = tf.keras.utils.load_img(image, target_size=(img_height,img_width))\n",
     "img_arr = tf.keras.utils.array_to_img(image)\n",
     "img_bat=tf.expand_dims(img_arr,0)"
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 42,
    "id": "68689dc1-eb27-4ba7-b121-108438c068a5",
    "metadata": {},
    "outputs": [
@@ -295,7 +295,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 24ms/step\n"
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 26ms/step\n"
      ]
     }
    ],
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 44,
    "id": "62c5c809-a2ed-4d79-9720-498352d8f837",
    "metadata": {},
    "outputs": [],
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 46,
    "id": "ffddb8ef-c9c1-4bee-adab-c53208e507db",
    "metadata": {},
    "outputs": [
@@ -323,7 +323,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Veg/Fruit in image is pomegranate with accuracy of 75.31\n"
+      "Veg/Fruit in image is chilli pepper with accuracy of 63.39\n"
      ]
     }
    ],
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 48,
    "id": "66399db9-e3b3-4841-9f8d-ecbaccedf38c",
    "metadata": {},
    "outputs": [],
